--- a/theme/wtp18/css/wtp2018.less
+++ b/theme/wtp18/css/wtp2018.less
@@ -99,8 +99,8 @@ a:link, a:visited, a:hover,a{text-decoration:none;}
 .owl-theme .owl-controls{
 	margin-top:-25px !important;
 	margin-right:10px}
-.owl-theme .owl-controls .owl-page span{background-color:white;opacity:0.8}	
-.owl-theme .owl-controls .owl-page.active span, .owl-theme .owl-controls.clickable .owl-page:hover span{background-color:white;opacity:0.9;font-size:1.1em;}
+.owl-theme .owl-controls .owl-page span{background-color:white;opacity:0.2}	
+.owl-theme .owl-controls .owl-page.active span, .owl-theme .owl-controls.clickable .owl-page:hover span{background-color:white;opacity:0.999;}
 
 ////////////////////////////////////////////////
     ///////global variables////////////////
