--- a/theme/wtp18/css/wtp2018.less
+++ b/theme/wtp18/css/wtp2018.less
@@ -1808,8 +1808,8 @@ ul.programme li:first-of-type:first-line{font-size:1.5em}
 		p{font-size:0.85em}
 		p.icone{font-size: 3em; }
 		height: 30%;
-		.title{margin-top:30px;}
 	}
+	.slide-center.title{margin-top:20px;}
 	.slide{
 	height: 300px;
 	.colLeft, .colRight{height: 300px;}
