--- a/theme/wtp18/css/wtp2018.less
+++ b/theme/wtp18/css/wtp2018.less
@@ -239,6 +239,16 @@ display: block;
 .navbar-toggle{float:right; border:0px;margin:0px;padding:0px}
 #push-button{float:right};
 /*NAV SECONDAIRE*/
+.nav-sec0{
+    h2{font-size: 3em;}
+    text-align: center;
+    color: white;
+    margin:0;
+    text-transform: uppercase;
+}
+@media screen and (max-width: 400px) {
+  .nav-sec0{ h2{font-size: 0.8em;}}
+}
 .nav-sec{
     font-size: 2em;
     text-align: center;
@@ -251,6 +261,8 @@ display: block;
 //.nav-sec p{margin:50px;}
 .nav-sec a{text-decoration:none;cursor: pointer;color:white;}
 .nav-sec a:hover{font-size:1.1em;color:white;}
+.nav-sec0 a{text-decoration:none;cursor: pointer;color:white;}
+.nav-sec0 a:hover{font-size:1.1em;color:white;}
 /*NAV ENTRÉE*/
 @media screen and (max-width: 400px) {
 	.nav-entree {padding-top:300px;}
