--- a/theme/wtp18/css/wtp2018.less
+++ b/theme/wtp18/css/wtp2018.less
@@ -246,8 +246,11 @@ display: block;
     margin:0;
     text-transform: uppercase;
 }
+@media screen and (min-width: 400px) and (max-width: 768px) {
+  .nav-sec0{ h2{font-size: 2em;}}
+}
 @media screen and (max-width: 400px) {
-  .nav-sec0{ h2{font-size: 0.8em;}}
+  .nav-sec0{ h2{font-size: 1.5em;}}
 }
 .nav-sec{
     font-size: 2em;
