--- a/theme/wtp18/css/wtp2018.css
+++ b/theme/wtp18/css/wtp2018.css
@@ -433,9 +433,14 @@ img.hover:hover {
 .nav-sec0 h2 {
   font-size: 3em;
 }
+@media screen and (min-width: 400px) and (max-width: 768px) {
+  .nav-sec0 h2 {
+    font-size: 2em;
+  }
+}
 @media screen and (max-width: 400px) {
   .nav-sec0 h2 {
-    font-size: 0.8em;
+    font-size: 1.5em;
   }
 }
 .nav-sec {
