--- a/theme/wtp18/css/wtp2018.less
+++ b/theme/wtp18/css/wtp2018.less
@@ -266,6 +266,7 @@ display: block;
 .nav-sec a:hover{font-size:1.1em;color:white;}
 .nav-sec0 a{text-decoration:none;cursor: pointer;color:white;}
 .nav-sec0 a:hover{font-size:1.1em;color:white;}
+.nav-sec0>div{height:80px; line-height:80px; overflow-y:hidden}
 /*NAV ENTRÉE*/
 @media screen and (max-width: 400px) {
 	.nav-entree {padding-top:300px;}
