--- a/theme/wtp18/css/wtp2018.css
+++ b/theme/wtp18/css/wtp2018.css
@@ -474,6 +474,11 @@ img.hover:hover {
   font-size: 1.1em;
   color: white;
 }
+.nav-sec0>div {
+  height: 80px;
+  line-height: 80px;
+  overflow-y: hidden;
+}
 @media screen and (max-width: 400px) {
   .nav-entree {
     padding-top: 300px;
