--- a/theme/cte/css/cte.less
+++ b/theme/cte/css/cte.less
@@ -1179,7 +1179,7 @@ h2.capital{text-align: center; padding:12px 0; border-bottom: 2px solid; margin-
 	color:@rouge;
   }
   select{
-    border: 5px solid #c1573c !important;
+    border: 2px solid white;
     background-color: transparent;
     width: 100%; padding: 6px;
   }
