--- a/theme/cte/templates/blocks/paymentBlock.html
+++ b/theme/cte/templates/blocks/paymentBlock.html
@@ -12,7 +12,7 @@
                 <ng-form name="proposition_choice">
                         <div  class="row">
 							<div class="col-xs-6 col-xs-push-3">
-								<select ng-model="paymentCtrl.propositionId" name="proposition" required>
+								<select style="border: 5px solid #c1573c;" ng-model="paymentCtrl.propositionId" name="proposition" required>
 									<option selected disabled>Choisissez votre proposition</option>
 									<option ng-repeat="proposition in paymentCtrl.contents | orderBy : 'text' " value="{{proposition.id}}">{{proposition.text}}</option>
 								</select>
