--- a/theme/wtp18/templates/blocks/navigation.html
+++ b/theme/wtp18/templates/blocks/navigation.html
@@ -1,6 +1,6 @@
 <div ng-controller="MenuController as menuCtrl" >
 	<nav  role="navigation" class="top-navigation">
-		<div class="home">
+		<div class="home" ng-if="siteWTP">
 			<a ng-href="/fr/accueil" class="ng-scope">
 			<img alt="" style="height:90px;" class="img-responsive" ng-src="/dam?media-id=5a6f4c1d396588d25e999bd9&amp;">
 			</a>
