--- a/theme/wtp18/templates/blocks/bg_image.html
+++ b/theme/wtp18/templates/blocks/bg_image.html
@@ -1,6 +1,6 @@
 <div ng-controller="BgImageController as imageCtrl">
         <header class="parallax" afkl-lazy-image-options='{"background": true}'
-                afkl-lazy-image="{{rubedo.imageUrl.getUrlByMediaId(blockConfig.imageFile ,{height:'400px',mode:'boxed'})}} 768w, {{rubedo.imageUrl.getUrlByMediaId(blockConfig.imageFile,{height:'600px',mode:'boxed'})}} 972w, {{rubedo.imageUrl.getUrlByMediaId(blockConfig.imageFile ,{width:'1920px',mode:'boxed'})}} 1650w">
+                afkl-lazy-image="{{rubedo.imageUrl.getUrlByMediaId(blockConfig.imageFile,{height:'600px',mode:'boxed'})}} 972w, {{rubedo.imageUrl.getUrlByMediaId(blockConfig.imageFile ,{width:'1920px',mode:'boxed'})}} 1650w">
             <div class="container" ng-if="blockConfig.pageTitle" ng-include="rubedo.blockTemplateResolver.getTemplate('richText',{ })" ng-init="blockConfig = {contentId:blockConfig.pageTitle}">
         </header>
 </div>
