--- a/theme/cte/templates/blocks/paymentBlock.html
+++ b/theme/cte/templates/blocks/paymentBlock.html
@@ -12,7 +12,7 @@
                 <ng-form name="proposition_choice">
                         <div  class="row">
 							<div class="col-xs-6 col-xs-push-3">
-								<p>Choisissez votre proposition dans la liste ci-dessous :</p>
+								<p>{{rubedo.translate("Block.Paiement.Acces","Ci-dessous, vous pouvez procéder au paiement : ")}}</p>
 								<select style="border: 5px solid #c1573c;" ng-model="paymentCtrl.propositionId" name="proposition" required>
 									<option ng-repeat="proposition in paymentCtrl.contents | orderBy : 'text' " value="{{proposition.id}}">{{proposition.text}}</option>
 								</select>
