ploice Summer Festival

--- a/theme/wtp18/css/wtp2018.less
+++ b/theme/wtp18/css/wtp2018.less
@@ -48,6 +48,19 @@
 
 }
 
+@font-face {
+    font-family: 'Summer Festival';
+    src: url('/theme/wtp18/fonts/SummerFestival.eot');
+    src: url('/theme/wtp18/fonts/SummerFestival.eot?#iefix') format('embedded-opentype'),
+         url('/theme/wtp18/fonts/SummerFestival.woff2') format('woff2'),
+         url('/theme/wtp18/fonts/SummerFestival.woff') format('woff'),
+         url('/theme/wtp18/fonts/SummerFestival.ttf') format('truetype'),
+         url('/theme/wtp18/fonts/SummerFestival.svg#SummerFestival') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
 
 //@import url(http://fonts.googleapis.com/css?family=Cabin:400,700);
 @max_width:1550px;
