--- a/theme/wtp18/css/wtp2018.less
+++ b/theme/wtp18/css/wtp2018.less
@@ -527,6 +527,7 @@ input:checked + .push-menu-title:after{content:"c"}
 }
 @media screen and (max-width: @mobile) {
 				.titre_summer h1{font-size:4em;}
+				.titre_summer h2{font-size: 1.1em;}
 }
 @media screen and (min-width: @mobile) and (max-width: @tablet) {
 				.titre_summer h1{font-size:7em;}
