--- a/theme/cte/templates/blocks/inscription.html
+++ b/theme/cte/templates/blocks/inscription.html
@@ -72,7 +72,14 @@
                             <div class="col-xs-12" ng-if="formCtrl.content.fields.accompte > 0">
                                 <input type="radio"  name="paiement_maintenant" id="accompte" ng-model="inscription.paiement_maintenant" checked="checked" value="accompte" required>
                                 <label for="accompte">{{contentDetailCtrl.getLabelByName('accompte')}} : {{formCtrl.content.fields.accompte}}{{formCtrl.paymentmeans.nativePMConfig.monnaie}}</label> 
-                            </div>                            
+                            </div>
+                            <div class="col-xs-12" ng-if="formCtrl.content.fields.accompte > 0 && formCtrl.content.fields.accompte2 > 0">
+                                <label for="accompte">{{contentDetailCtrl.getLabelByName('accompte')}} :</label>
+                                <input type="radio"  name="paiement_maintenant" id="accompte" ng-model="inscription.paiement_maintenant" checked="checked" value="accompte" required>
+                                        <label for="accompte" class="sexe_label dons">{{formCtrl.content.fields.accompte}}{{formCtrl.paymentmeans.nativePMConfig.monnaie}}</label>
+                                <input type="radio"  name="paiement_maintenant" id="accompte2" ng-model="inscription.paiement_maintenant" checked="checked" value="accompte2" required>
+                                        <label for="accompte2" class="sexe_label dons">{{formCtrl.content.fields.accompte2}}{{formCtrl.paymentmeans.nativePMConfig.monnaie}}</label> 
+                            </div>                       
                             <div class="col-xs-12" ng-repeat="option in formCtrl.content.fields.paimentOption.paimentOption">
                                 <input type="radio"  name="paiement_maintenant" ng-attr-id="{{option}}" ng-model="inscription.paiement_maintenant" value="{{option}}" required ng-disabled="!inscription.montantTotalAPayer || (inscription.montantTotalAPayer==0)">
                                 <label for="{{option}}" ng-if="option == 'partie'">{{rubedo.translate("Block.Inscription.Paf.Maintenant.Partie")}}
