--- a/theme/cte/templates/blocks/inscription.html
+++ b/theme/cte/templates/blocks/inscription.html
@@ -69,7 +69,7 @@
                                 <input type="radio"  name="paiement_maintenant" id="accompte" ng-model="inscription.paiement_maintenant" value="rien"required>
                                 <label for="accompte">{{rubedo.translate("Block.Inscription.Paf.Maintenant.Rien")}}</label>    
                             </div>
-                            <div class="col-xs-12" ng-if="formCtrl.content.fields.accompte > 0">
+                            <div class="col-xs-12" ng-if="formCtrl.content.fields.accompte > 0 && formCtrl.content.fields.accompte2 == 0">
                                 <input type="radio"  name="paiement_maintenant" id="accompte" ng-model="inscription.paiement_maintenant" checked="checked" value="accompte" required>
                                 <label for="accompte">{{contentDetailCtrl.getLabelByName('accompte')}} : {{formCtrl.content.fields.accompte}}{{formCtrl.paymentmeans.nativePMConfig.monnaie}}</label> 
                             </div>
