--- a/theme/cte/templates/blocks/inscription.html
+++ b/theme/cte/templates/blocks/inscription.html
@@ -77,8 +77,14 @@
                                 <label for="accompte">{{contentDetailCtrl.getLabelByName('accompte')}} :</label>
                                 <input type="radio"  name="paiement_maintenant" id="accompte" ng-model="inscription.paiement_maintenant" checked="checked" value="accompte" required>
                                         <label for="accompte" class="sexe_label dons">{{formCtrl.content.fields.accompte}}{{formCtrl.paymentmeans.nativePMConfig.monnaie}}</label>
-                                <input type="radio"  name="paiement_maintenant" id="accompte2" ng-model="inscription.paiement_maintenant" checked="checked" value="accompte2" required>
-                                        <label for="accompte2" class="sexe_label dons">{{formCtrl.content.fields.accompte2}}{{formCtrl.paymentmeans.nativePMConfig.monnaie}}</label> 
+                                <input type="radio"  name="paiement_maintenant" id="accompte2" ng-model="inscription.paiement_maintenant" value="accompte2" required>
+                                        <label for="accompte2" class="sexe_label dons">{{formCtrl.content.fields.accompte2}}{{formCtrl.paymentmeans.nativePMConfig.monnaie}}</label>
+                                <div class="donResult" style="margin-top:12px" ng-if="don.montant == contentDetailCtrl.content.fields.accompte">
+                                        <rubedo-field  field =  "{{contentDetailCtrl.getFieldByName('desc_1')}}" ng-init="fieldInputMode=false"></rubedo-field>
+                                </div>
+                                <div class="donResult" style="margin-top:12px" ng-if="don.montant == contentDetailCtrl.content.fields.accompte2">
+                                        <rubedo-field  field =  "{{contentDetailCtrl.getFieldByName('desc_2')}}" ng-init="fieldInputMode=false"></rubedo-field>
+                                </div>
                             </div>                       
                             <div class="col-xs-12" ng-repeat="option in formCtrl.content.fields.paimentOption.paimentOption">
                                 <input type="radio"  name="paiement_maintenant" ng-attr-id="{{option}}" ng-model="inscription.paiement_maintenant" value="{{option}}" required ng-disabled="!inscription.montantTotalAPayer || (inscription.montantTotalAPayer==0)">
