--- a/theme/cte/templates/blocks/inscription.html
+++ b/theme/cte/templates/blocks/inscription.html
@@ -73,17 +73,17 @@
                                 <input type="radio"  name="paiement_maintenant" id="accompte" ng-model="inscription.paiement_maintenant" checked="checked" value="accompte" required>
                                 <label for="accompte">{{contentDetailCtrl.getLabelByName('accompte')}} : {{formCtrl.content.fields.accompte}}{{formCtrl.paymentmeans.nativePMConfig.monnaie}}</label> 
                             </div>
-                            <div class="col-xs-12" ng-if="formCtrl.content.fields.accompte > 0 && formCtrl.content.fields.accompte2 > 0">
+                            <div class="col-xs-12" ng-if="formCtrl.content.fields.accompte > 0 && formCtrl.content.fields.accompte2 > 0" ng-init="inscription.montantAPayerMaintenant = contentDetailCtrl.content.fields.accompte">
                                 <label for="accompte">{{contentDetailCtrl.getLabelByName('accompte')}} :</label>
-                                <input type="radio"  name="paiement_maintenant" id="accompte" ng-model="inscription.paiement_maintenant" checked="checked" value="accompte" required>
+                                <input type="radio"  name="paiement_maintenant" id="accompte" checked="checked" value="{{formCtrl.content.fields.accompte}}" ng-model="inscription.montantAPayerMaintenant" required>
                                         <label for="accompte" class="sexe_label dons">{{formCtrl.content.fields.accompte}}{{formCtrl.paymentmeans.nativePMConfig.monnaie}}</label>
-                                <input type="radio"  name="paiement_maintenant" id="accompte2" ng-model="inscription.paiement_maintenant" value="accompte2" required>
+                                <input type="radio"  name="paiement_maintenant" id="accompte2" value="{{formCtrl.content.fields.accompte2}}" ng-model="inscription.montantAPayerMaintenant" required>
                                         <label for="accompte2" class="sexe_label dons">{{formCtrl.content.fields.accompte2}}{{formCtrl.paymentmeans.nativePMConfig.monnaie}}</label>
-                                <div class="donResult" style="margin-top:12px" ng-if="don.montant == contentDetailCtrl.content.fields.accompte">
-                                        <rubedo-field  field =  "{{contentDetailCtrl.getFieldByName('desc_1')}}" ng-init="fieldInputMode=false"></rubedo-field>
+                                <div class="donResult" style="margin-top:12px" ng-if="inscription.montantAPayerMaintenant == formCtrl.content.fields.accompte">
+                                        <rubedo-field  field =  "{{formCtrl.getFieldByName('desc_1')}}" ng-init="fieldInputMode=true"></rubedo-field>
                                 </div>
-                                <div class="donResult" style="margin-top:12px" ng-if="don.montant == contentDetailCtrl.content.fields.accompte2">
-                                        <rubedo-field  field =  "{{contentDetailCtrl.getFieldByName('desc_2')}}" ng-init="fieldInputMode=false"></rubedo-field>
+                                <div class="donResult" style="margin-top:12px" ng-if="inscription.montantAPayerMaintenant == formCtrl.content.fields.accompte2">
+                                        <rubedo-field  field =  "{{formCtrl.getFieldByName('desc_2')}}" ng-init="fieldInputMode=false"></rubedo-field>
                                 </div>
                             </div>                       
                             <div class="col-xs-12" ng-repeat="option in formCtrl.content.fields.paimentOption.paimentOption">
