--- a/theme/cte/css/cte.less
+++ b/theme/cte/css/cte.less
@@ -906,6 +906,7 @@ p.red-sub{.capital; font-size:11px !important; .txt-red; margin-bottom: 24px}
  }
  .button:hover{opacity:0.8;}
 .button.rouge{background: @rouge;box-shadow: 0px 2px @rouge_shadow; color:white}
+.buttonRouge{background: @rouge;box-shadow: 0px 2px @rouge_shadow; color:white}
   .button.submit{border: 2px solid @rouge; color:@rouge;}
   .button.submit.disabled, .button.rouge.disabled{color:@marron; border: 2px solid @marron; cursor: default}
 
