--- a/theme/wtp18/templates/blocks/contentDetail/pageWTP18.html
+++ b/theme/wtp18/templates/blocks/contentDetail/pageWTP18.html
@@ -1,7 +1,7 @@
 
 
         
-        <!-- Ajout d'un menu secondaire en haute de page -->
+        <!-- Ajout d'un menu secondaire en haute de page 
         <div class="nav-sec" ng-if="block.code=='1/intervenant' " style="margin-top:-30px">
             <div class="row col-xs-12 col-sm-4" ng-repeat="bloc in contentDetailCtrl.pageBlock | orderBy :'order' track by $index" class="" >
                 <p style="background-color:#c3357b;"  ng-if="bloc[0].color==0">
@@ -14,7 +14,7 @@
                     <a  ng-href="{{contentDetailCtrl.menu.url}}?page={{bloc[0].code}}">{{bloc[0].title | split:'//':0}}</a>
                 </p>
             </div>
-        </div>
+        </div>-->
             
             
             
