Changement couleur @volontaires WTP18

--- a/theme/wtp18/css/wtp2018.less
+++ b/theme/wtp18/css/wtp2018.less
@@ -133,7 +133,7 @@ a:link, a:visited, a:hover,a{text-decoration:none;}
 @workshops:#ec008c;//#ff5143;
 @ateliers:#ec008c;//#3e9dd9;
 @studilac:#00d3de;
-@volontaires:#00a4b7;
+@volontaires:white;//#00a4b7;
 @intervenants:@volontaires;
 @jpros:#00D3DE;
 @groupe:#B4DB37;
