Videos non disponibles NFG

--- a/theme/netforgod/templates/blocks/contentDetail/filmNFG.html
+++ b/theme/netforgod/templates/blocks/contentDetail/filmNFG.html
@@ -20,6 +20,8 @@
 				<div class="buy-dvd cursor-as-pointer" ng-if="!contentDetailCtrl.content.fields.horsSerie && fieldEntity['boutique']">
 					<a ng-href="{{contentDetailCtrl.content.fields.boutique}}" target="_blank"><i class="icon-dvd"></i>{{rubedo.translate('NFG.AcheterDVD','Buy the video')}}</a>
 				</div>
+				<br/>
+				<h3 style="font-size: 1.5em;color:#c1573c">! Our videos are not available for the moment</h3>
 			</div>
 		</div>
 		<div class="row padding-large" ng-if="contentDetailCtrl.watch !='no' ">
