--- a/theme/foi/templates/blocks/contentList.html
+++ b/theme/foi/templates/blocks/contentList.html
@@ -102,19 +102,37 @@
                 </div>
                 <!--PRESENTATION ARTICLES 2 COLONNES-->
                 <div  ng-switch-when="2">
-                    <div ng-controller="ContentListDetailController as contentListDetailCtrl" ng-repeat="content in columnContents track by $index" class="articlesAnciens" ng-class="contentListCtrl.columns" >
-                                <a class="block" ng-href="{{ fieldEditMode ? '' : content.detailPageUrl }}">
-                                    <div class="list-item-img col-sm-6">
-                                        <img class="img-responsive" ng-if="content.fields.image"
-                                            ng-src="{{rubedo.imageUrl.getUrlByMediaId(content.fields.image,{height:'400px',mode:'boxed'}) }}"
-                                            alt="{{ content.fields.text }}"/>
-                                    </div>
-                                    
-                                    <!--<p class="list-tags" ng-repeat="taxo in content.taxonomy['5a114f1b396588d22856706f']" ng-if="contentListCtrl.getTermInTaxo(taxo)">{{contentListCtrl.getTermInTaxo(taxo)}}</p>-->
-                                    <h5 class="list-item-title col-sm-6"><span>{{content.fields.text}} <span ng-if="contentListCtrl.isFOContributeMode">( {{rubedo.translate("Label." + content.status.toLowerCase())}} )</span></span>
-                                        <p class="redacteur">{{content.fields.redacteur}}</p>
-                                    </h5>
-                                </a>        
+                    <div ng-if="rubedo.current.site.id === '58df5d4d245640860f8b9290' ">
+                        <div ng-controller="ContentListDetailController as contentListDetailCtrl" ng-repeat="content in columnContents track by $index" class="articleList" ng-class="contentListCtrl.columns" >
+                                    <a class="block" ng-href="{{ fieldEditMode ? '' : content.detailPageUrl }}">
+                                        <div class="list-item-img col-sm-6">
+                                            <img class="img-responsive" ng-if="content.fields.image"
+                                                ng-src="{{rubedo.imageUrl.getUrlByMediaId(content.fields.image,{height:'400px',mode:'boxed'}) }}"
+                                                alt="{{ content.fields.text }}"/>
+                                        </div>
+                                        
+                                        <!--<p class="list-tags" ng-repeat="taxo in content.taxonomy['5a114f1b396588d22856706f']" ng-if="contentListCtrl.getTermInTaxo(taxo)">{{contentListCtrl.getTermInTaxo(taxo)}}</p>-->
+                                        <h5 class="list-item-title col-sm-6"><span>{{content.fields.text}} <span ng-if="contentListCtrl.isFOContributeMode">( {{rubedo.translate("Label." + content.status.toLowerCase())}} )</span></span>
+                                            <p class="redacteur">{{content.fields.redacteur}}</p>
+                                        </h5>
+                                    </a>        
+                        </div>
+                    </div> 
+                    <div ng-if="rubedo.current.site.id !== '58df5d4d245640860f8b9290' ">
+                        <div ng-controller="ContentListDetailController as contentListDetailCtrl" ng-repeat="content in columnContents track by $index" class="articlesAnciens" ng-class="contentListCtrl.columns" >
+                                    <a class="block" ng-href="{{ fieldEditMode ? '' : content.detailPageUrl }}">
+                                        <div class="list-item-img col-sm-6">
+                                            <img class="img-responsive" ng-if="content.fields.image"
+                                                ng-src="{{rubedo.imageUrl.getUrlByMediaId(content.fields.image,{height:'400px',mode:'boxed'}) }}"
+                                                alt="{{ content.fields.text }}"/>
+                                        </div>
+                                        
+                                        <!--<p class="list-tags" ng-repeat="taxo in content.taxonomy['5a114f1b396588d22856706f']" ng-if="contentListCtrl.getTermInTaxo(taxo)">{{contentListCtrl.getTermInTaxo(taxo)}}</p>-->
+                                        <h5 class="list-item-title col-sm-6"><span>{{content.fields.text}} <span ng-if="contentListCtrl.isFOContributeMode">( {{rubedo.translate("Label." + content.status.toLowerCase())}} )</span></span>
+                                            <p class="redacteur">{{content.fields.redacteur}}</p>
+                                        </h5>
+                                    </a>        
+                        </div>
                     </div>
                 </div>
 
