Content list prensentation 3 col

--- a/theme/foi/css/foi.less
+++ b/theme/foi/css/foi.less
@@ -326,6 +326,12 @@ header.content>div{line-height: normal;display: inline-block;text-align:left; ve
   margin-bottom: 30px;
 		h4:hover{text-decoration: none; font-weight:bold}
 }
+.articlePresentation_3col{
+		height: 120px;
+  overflow-y: hidden;
+  margin-bottom: 30px;
+		h4:hover{text-decoration: none; font-weight:bold}
+}
 
 
 
