--- a/theme/foi/css/foi.less
+++ b/theme/foi/css/foi.less
@@ -206,7 +206,8 @@ display: inline-block; position: relative; width:100%;img{margin:30px 15% 50px; 
 .footer{
 		padding: 50px 15px 30px;
 		background-color: #737373;
-		* {color:white}
+		color:white;
+		a:hover{text-decoration:none;font-weight:bold;}
 }
 
 /*PRESENTATION VIGNETTE*/
