--- a/theme/foi/css/foi.less
+++ b/theme/foi/css/foi.less
@@ -207,7 +207,7 @@ display: inline-block; position: relative; width:100%;img{margin:30px 15% 50px; 
 		padding: 50px 15px 30px;
 		background-color: #737373;
 		*{color:white;}
-		a:hover{text-decoration:none;font-weight:bold;}
+		a:hover{text-decoration:none;font-weight:bold;color:white;}
 }
 
 /*PRESENTATION VIGNETTE*/
