--- a/theme/foi/templates/blocks/contentDetail/article_foi.html
+++ b/theme/foi/templates/blocks/contentDetail/article_foi.html
@@ -172,6 +172,7 @@
 		<rubedo-field ng-if="fieldEditMode" field =  "{{contentDetailCtrl.getFieldByName('text')}}"></rubedo-field><!--Plan-->
 		<div class="sommaire">	
 			<div ng-repeat="content in contentDetailCtrl.accesArticles.data track by $index">
+				<p>{{contentDetailCtrl.content.taxonomy.5a114f1b396588d22856706f[0]}}</p>
 				<p  class="article" ng-if="content.taxonomy.5a114f1b396588d22856706f[0] === contentDetailCtrl.content.taxonomy.5a114f1b396588d22856706f[0]"><a ng-href="{{ content.url }}">{{ content.text[0] }}</a></p>
 			</div>
 		</div>	
@@ -192,7 +193,7 @@
 						<img class="img-responsive  padding-top padding-right" ng-if="fieldEntity['image']"
 							ng-src="{{rubedo.imageUrl.getUrlByMediaId(fieldEntity['image'],{width:'50px',mode:'boxed'}) }}"
 							alt=""/>
-					</p>-->
+					</p>
 				</div>
 			</div>
 		</a>
