--- a/theme/foi/templates/blocks/contentDetail/article_foi.html
+++ b/theme/foi/templates/blocks/contentDetail/article_foi.html
@@ -174,7 +174,7 @@
 			<div ng-show="displayLienArticle[$index]" class="col-sm-4">
 				<a ng-href="{{ content.url }}">
 					<p  class="article" >{{ content.text[0] }}</p>
-					<p  class="redacteur">{{ content.i18n.fr.fields.redacteur }}</p>
+					<p  class="redacteur">{{ content.i18n.fr.fields.redacteur[0] }}</p>
 					<br/>
 				</a>
 			</div>
