--- a/theme/foi/templates/blocks/contentDetail/article_foi.html
+++ b/theme/foi/templates/blocks/contentDetail/article_foi.html
@@ -178,9 +178,10 @@
 					<br/>
 				</a>-->
 				<a ng-href="{{content.url}}">
-					<img ng-if="content['fields.image'][0]" ng-src="{{rubedo.imageUrl.getUrlByMediaId(content['fields.image'][0],{width:'420px',height:'200px',mode:'crop'})}}" style="width:90%">
-					<img ng-if="!content['fields.image'][0]" src="/theme/cte/img/icons/video-thumb.jpg" style="width:120px">
-					<h3>{{content.title}}</h3>
+					<img ng-if="content['fields.image']" ng-src="{{rubedo.imageUrl.getUrlByMediaId(content['fields.image'],{width:'420px',height:'200px',mode:'crop'})}}" style="width:90%">
+					<img ng-if="!content['fields.image']" src="/theme/cte/img/icons/video-thumb.jpg" style="width:120px">
+					<p  class="article" >{{ content.text[0] }}</p>
+					<p  class="redacteur">{{ content.redacteur}}</p>
 				</a>	
 			</div>
 		</div>
