--- a/theme/foi/css/foi.less
+++ b/theme/foi/css/foi.less
@@ -359,6 +359,19 @@ p .redacteur{
 		text-transform: uppercase !important;
 		margin-bottom: 80px !important;
 }
+a .redacteur{
+		font-size: 0.9em;
+		text-transform: uppercase !important;
+		margin-bottom: 80px !important;
+}
+a:hover .redacteur{
+		font-size: 0.9em;
+		text-decoration: none;
+		text-transform: uppercase !important;
+		margin-bottom: 80px !important;
+}
+
+
 
 p .resume {
 		color:@grey !important;
