--- a/theme/wtp18/templates/blocks/contentDetail/pageWTP.html
+++ b/theme/wtp18/templates/blocks/contentDetail/pageWTP.html
@@ -22,7 +22,7 @@
             <div clas="col-sm-12">
                 <!--<rubedo-field ng-repeat="field in fields track by $index" ng-if="fieldEntity[field.config.name] && (field.config.name).substring(0, 5)=='infos' && fieldEntity[field.config.name].title!=''" class="color"></rubedo-field>
                 <rubedo-field field= "{{contentDetailCtrl.getFieldByName('informations')}}" ng-if="fieldEntity['informations']"></rubedo-field>-->
-                <rubedo-field field= "{{contentDetailCtrl.getFieldByName('texteRiche')}}" ng-if="fieldEntity['texteRiche'] && rubedo.current.page.id=='5a7441ba396588375e7cb640' " ></rubedo-field>
+                <rubedo-field field= "{{contentDetailCtrl.getFieldByName('texteRiche')}}" ng-if="fieldEntity['texteRiche']"></rubedo-field>
             </div>
         </div>
     </div>
